First changes in template.

--- a/app/elements/footer-block/footer-block.html
+++ b/app/elements/footer-block/footer-block.html
@@ -122,7 +122,7 @@
         <div class="container footer layout vertical">
             <div class="footer-content layout horizontal justified">
                 <div class="flex gplus">
-                    <g:plusone size="medium" width="200" annotation="inline" href="http://sp.devfest.com.br"></g:plusone>
+                    <g:plusone size="medium" width="200" annotation="inline" href="http://devfestcerrado.com.br"></g:plusone>
                 </div>
                 <paper-button class="footer-backtotop" on-tap="backToTop" noink>
                     Voltar para o topo
@@ -135,7 +135,7 @@
                         <span class="link-block-title block">Para visitantes</span>
                         <ul class="link-block">
                             <li><a href="https://developers.google.com/" target="_blank">Google Developers</a></li>
-                            <li><a href="/2014" target="_blank">GDG DevFest São Paulo 2014</a></li>
+                            <li><a href="http://devfestgoias.com.br" target="_blank">GDG DevFest Goiás 2015</a></li>
                             <!--
                             <li><a href="/code-of-conduct">Código de Conduta</a></li>
                             -->
@@ -144,14 +144,14 @@
                     <div class="flex link-block-wrapper">
                         <span class="link-block-title block">Para parceiros</span>
                         <ul class="link-block">
-                            <li><a href="https://drive.google.com/open?id=0B20I--Ffg6D4VU9USlpWa3A0cHc" target="_blank">Proposta de Patrocínio</a></li>
-                            <li><a href="http://bit.ly/devfestsp-mk" target="_blank">Media Kit</a></li>
+                            <!-- <li><a href="#" target="_blank">Proposta de Patrocínio</a></li> -->
+                            <li><a href="https://goo.gl/6oloNU" target="_blank">Media Kit</a></li>
                         </ul>
                     </div>
                     <div class="flex link-block-wrapper">
                         <span class="link-block-title block">Entre em contato</span>
                         <ul class="link-block">
-                            <li><a href="mailto:sp@devfest.com.br">sp@devfest.com.br</a></li>
+                            <li><a href="mailto:sp@devfest.com.br">devfestcerrado@gmail.com</a></li>
                         </ul>
                         <div class="icons-wrapper align-pb-block">
                             <a href="https://plus.google.com/+gdgSPorg" target="_blank">
