--- a/app/elements/statistics-block/statistics-block.html
+++ b/app/elements/statistics-block/statistics-block.html
@@ -44,19 +44,19 @@
         },
         attached: function() {
             this.statistics = [{
-                counter: 750,
+                counter: NaN,
                 caption: 'Participantes'
               }, {
-                  counter: 3,
+                  counter: NaN,
                   caption: 'Áreas simultâneas'
               }, {
-                counter: 16,
+                counter: NaN,
                 caption: 'Palestras'
               }, {
-                counter: 28,
+                counter: NaN,
                 caption: 'Lightning Talks'
               }, {
-                counter: 11,
+                counter: NaN,
                 caption: 'Experimentos interativos'
             }];
         }
