--- a/app/elements/call-to-action/call-to-action.html
+++ b/app/elements/call-to-action/call-to-action.html
@@ -56,34 +56,19 @@
             }
         </style>
         <div class="container container-narrow flex relative layout vertical-horizontal center-center">
-            <h4 class="heading flex text self-center text-center">Veja como foi o DevFest SP 2014</h4>
-             <paper-button class="white border-button open-dialog-button" on-tap="playVideo">Assista ao vídeo</paper-button>
+            <h4 class="heading flex text self-center text-center">Veja como foi o DevFest Goiás 2015</h4>
+                <a href="https://plus.google.com/events/gallery/ctc1n6o9dhnr4jj186svg90v5dg" target="_blank">
+                     <paper-button class="white border-button open-dialog-button">
+                            Ver todas as fotos
+                    </paper-button>
+                </a>
+
         </div>
-        <paper-dialog class="video-dialog fit" id="videoDialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation">
-            <paper-toolbar class="navbar-overlay fit">
-                <paper-icon-button icon="icons:arrow-back" on-tap="closeVideoCard"></paper-icon-button>
-                <div class="title text-left">DevFest São Paulo 2014 - Highlights</div>
-            </paper-toolbar>
-            <div class="fullvideo-container fit">
-                <google-youtube id="video" video-id="XmRjWIEt-58" fluid="true" autohide="1" chromeless="true"></google-youtube>
-            </div>
-        </paper-dialog>
     </template>
 </dom-module>
 
 <script>
     Polymer({
-        is: 'call-to-action',
-        playVideo: function() {
-            ga('send', 'play-2014-video', 'button', 'click'); // jshint ignore:line
-
-            this.$.videoDialog.open();
-            this.$.video.play();
-        },
-        closeVideoCard: function() {
-            this.$.videoDialog.close();
-            this.$.video.pause();
-            this.$.video.seekTo(0);
-        }
+        is: 'call-to-action'
     });
 </script>
