--- a/app/index.html
+++ b/app/index.html
@@ -7,40 +7,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Oleh Zasadnyy, GDG Lviv">
   <meta name="description" content="">
-  <meta name="keywords" content="event, gdg, gde, devfest, google, programming, android, chrome, polymer, developers, sao paulo">
-  <link rel="canonical" href="http://sp.devfest.com.br/">
-  <title>GDG DevFest São Paulo 2015 &bull; 21 de novembro de 2015</title>
+  <meta name="keywords" 
+        content="event, gdg, gde, devfest, 
+                google, programming, android, 
+                gdg-goiania, gdg-brasilia,
+                gdg-jatai, gdg-rioverde, gdg-itumbiara,
+                gdg-uberlandia, gdg uberaba">
+  <link rel="canonical" href="http://devfestcerrado.com.br">
+  <title>GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016</title> <!-- TODO: Edit -->
 
   <!-- Social: Twitter -->
+  <!-- TODO: Edit -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@GDGSP">
-  <meta name="twitter:title" content="GDG DevFest São Paulo 2015 &bull; 21 de novembro de 2015">
+  <meta name="twitter:title" content="GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016">
   <meta name="twitter:description" content="">
-  <meta name="twitter:image:src" content="http://sp.devfest.com.br/images/seo/seo.jpg">
+  <meta name="twitter:image:src" content="http://devfestcerrado.com.br/images/seo/seo.jpg">
 
   <!-- Social: Facebook / Open Graph -->
-  <meta property="og:title" content="GDG DevFest São Paulo 2015 &bull; 21 de novembro de 2015" />
-  <meta property="og:site_name" content="GDG DevFest São Paulo 2015 &bull; 21 de novembro de 2015" />
+  <!-- TODO: Edit -->
+  <meta property="og:title" content="GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016" />
+  <meta property="og:site_name" content="GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://sp.devfest.com.br/" />
-  <meta property="og:image" content="http://sp.devfest.com.br/images/seo/seo.jpg" />
+  <meta property="og:url" content="http://devfestcerrado.com.br/" />
+  <meta property="og:image" content="http://devfestcerrado.com.br/images/seo/seo.jpg" />
   <meta property="og:description" content="" />
 
   <!-- Chrome for Android theme color -->
-  <meta name="theme-color" content="#00BCD4">
+  <meta name="theme-color" content="#FF8811">
   <!-- Web Application Manifest -->
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="manifest" href="manifest.json">
   <!-- Tile color for Win8 -->
-  <meta name="msapplication-TileColor" content="#00BCD4">
+  <meta name="msapplication-TileColor" content="#FF8811">
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Polymer Starter Kit">
+  <meta name="application-name" content="DevFestCerrado2016">
   <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Polymer Starter Kit">
+  <meta name="apple-mobile-web-app-title" content="DevFestCerrado2016">
   <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
   <!-- Tile icon for Win8 (144x144) -->
   <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
@@ -63,14 +70,16 @@
             <paper-header-panel drawer class="drawer" mode="seamed">
                 <paper-toolbar class="tall">
                   <div class="top">
-                      <img class="logo" src="images/logo-white.svg" alt="GDG DevFest 2015">
+                      <img class="logo" src="images/logo-white.svg" alt="GDG DevFest Cerrado 2016">
                   </div>
                   <div class="bottom">
                       <span class="typo-white">
-                          21 de Novembro de 2015
+                      <!-- TODO: Edit -->
+                          31 de Agosto de 2016
                       </span>
                       <span class="block typo-white">
-                          Google São Paulo
+                      <!-- TODO: Edit -->
+                          Centro Cultural Oscar Niemeyer
                       </span>
                   </div>
                 </paper-toolbar>
@@ -91,20 +100,16 @@
                                 <div class="top-section hero">
                                   <div class="layout vertical-horizontal">
                                       <div class="flex center-content-xs">
-                                          <img class="logo" src="images/logo.svg" alt="GDG DevFest 2015">
-                                          <p class="dates bold">21 de Novembro de 2015</p>
-                                          <p class="description">Vem aí a maior conferência brasileira sobre tecnologias Google, <br/>organizada especialmente pela comunidade GDG!</p>
+                                          <img class="logo" src="images/logo.svg" alt="GDG DevFest Cerrado 2016">
+                                          <p class="dates bold">24 de setembro de 2016</p>
+                                          <p class="description">Vem aí a maior conferência sobre tecnologias Google do Cerrado Brasileiro, organizada especialmente pela comunidade GDG!</p>
                                           <p class="slogan">Aprender, inspirar e conectar!</p>
                                           <div class="links layout horizontal align-pb-block hero-home">
-
-                                            <!--
-                                              <a href="http://goo.gl/forms/kymZwijWFy" target="_blank">
-                                                  <paper-button noink>
-                                                      Proponha uma palestra
+                                              <a href="#" target="_blank">
+                                                  <paper-button class="colorful" raised>
+                                                      Submeta uma palestra
                                                   </paper-button>
                                               </a>
-                                            -->
-
                                               <a href="#pricetable">
                                                   <paper-button class="colorful" raised>
                                                       Inscreva-se
@@ -113,17 +118,17 @@
                                           </div>
                                       </div>
                                       <div class="flex relative right-section">
-                                          <iron-image class="fit" src="images/sp.svg" sizing="contain"></iron-image>
+                                          <iron-image class="fit" src="images/onca.png" sizing="contain"></iron-image>
                                       </div>
                                   </div>
 
                                 </div>
-                                <!--
-                                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Sao%20Paulo%202015&dates=20151121T080000/20151121T193000&details=___&location=FecomercioSP&pli=1&uid=&sf=true&output=xml#eventpage_6"
+                                
+                                <!-- <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Sao%20Paulo%202015&dates=20151121T080000/20151121T193000&details=___&location=FecomercioSP&pli=1&uid=&sf=true&output=xml#eventpage_6"
                                 target="_blank" onclick="ga('send', 'add-event-to-calendar', 'button', 'click');">
                                     <paper-fab class="section-fab-right" icon="icons:event"></paper-fab>
                                 </a>
-                              -->
+                               -->
                             </hero-block>
                             <statistics-block></statistics-block>
                             <featured-people source="../../data/featured-speakers.json">
@@ -133,7 +138,6 @@
 <!--
                             <tickets-block></tickets-block>
 -->
-
                             <social-feed source="http://devfestsp15-twitter.herokuapp.com/tweetledee/favoritesjson.php?c=10&cache_interval=7200"></social-feed>
                             <logos-block source="../../data/partners.json">
                                 <h4 class="heading">Parceiros</h4>
@@ -168,7 +172,7 @@
                             <footer-block></footer-block>
                         </section>
                         <section data-route="speakers">
-                            <hero-block class="section-shadow container-before-atop" style="background: #00BCD4; color: #fff;">
+                            <hero-block class="section-shadow container-before-atop" style="background: #FF8811; color: #fff;">
                                 <div class="top-section">
                                     <div class="title-wrapper layout horizontal">
                                         <h3 class="self-end">Palestrantes</h3>
@@ -208,5 +212,4 @@
     <script src="scripts/app.js"></script>
     <!-- endbuild-->
 </body>
-
 </html>
