--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -1,12 +1,12 @@
 <link rel="import" href="tags-color.html">
 <style is="custom-style" include="tags-color">
     :root {
-        --dark-primary-color: #0097A7;
-        --default-primary-color: #00BCD4;
-        --light-primary-color: #B2EBF2;
+        --dark-primary-color: #D93602;
+        --default-primary-color: #FF5722;
+        --light-primary-color: #FF774C;
         --text-primary-color: #FFFFFF;
-        --accent-color: #FF4081;
-        --primary-background-color: #B2EBF2;
+        --accent-color: #FFB46B;
+        --primary-background-color: #FF774C;
         --primary-text-color: #212121;
         --secondary-text-color: #727272;
         --disabled-text-color: #BDBDBD;
