--- a/app/index.html
+++ b/app/index.html
@@ -7,27 +7,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Oleh Zasadnyy, GDG Lviv">
   <meta name="description" content="">
-  <meta name="keywords" 
-        content="event, gdg, gde, devfest, 
-                google, programming, android, 
+  <meta name="keywords"
+        content="event, gdg, gde, devfest,
+                google, programming, android,
                 gdg-goiania, gdg-brasilia,
                 gdg-jatai, gdg-rioverde, gdg-itumbiara,
                 gdg-uberlandia, gdg uberaba">
   <link rel="canonical" href="http://devfestcerrado.com.br">
-  <title>GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016</title> <!-- TODO: Edit -->
+  <title>GDG DevFest Cerrado 2016 &bull; 15 de outubro de 2016</title> <!-- TODO: Edit -->
 
   <!-- Social: Twitter -->
   <!-- TODO: Edit -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@GDGSP">
-  <meta name="twitter:title" content="GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016">
+  <meta name="twitter:site" content="@gdggoiania">
+  <meta name="twitter:title" content="GDG DevFest Cerrado 2016 &bull; 15 de outubro de 2016">
   <meta name="twitter:description" content="">
   <meta name="twitter:image:src" content="http://devfestcerrado.com.br/images/seo/seo.jpg">
 
   <!-- Social: Facebook / Open Graph -->
   <!-- TODO: Edit -->
-  <meta property="og:title" content="GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016" />
-  <meta property="og:site_name" content="GDG DevFest Cerrado 2016 &bull; 24 de setembro de 2016" />
+  <meta property="og:title" content="GDG DevFest Cerrado 2016 &bull; 15 de outubro de 2016" />
+  <meta property="og:site_name" content="GDG DevFest Cerrado 2016 &bull; 15 de outubro de 2016" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://devfestcerrado.com.br/" />
   <meta property="og:image" content="http://devfestcerrado.com.br/images/seo/seo.jpg" />
@@ -101,7 +101,7 @@
                                   <div class="layout vertical-horizontal">
                                       <div class="flex center-content-xs">
                                           <img class="logo" src="images/logo.svg" alt="GDG DevFest Cerrado 2016">
-                                          <p class="dates bold">24 de setembro de 2016</p>
+                                          <p class="dates bold">15 de outubro de 2016</p>
                                           <p class="description">Vem aí a maior conferência sobre tecnologias Google do Cerrado Brasileiro, organizada especialmente pela comunidade GDG!</p>
                                           <p class="slogan">Aprender, inspirar e conectar!</p>
                                           <div class="links layout horizontal align-pb-block hero-home">
@@ -123,7 +123,7 @@
                                   </div>
 
                                 </div>
-                                
+
                                 <!-- <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Sao%20Paulo%202015&dates=20151121T080000/20151121T193000&details=___&location=FecomercioSP&pli=1&uid=&sf=true&output=xml#eventpage_6"
                                 target="_blank" onclick="ga('send', 'add-event-to-calendar', 'button', 'click');">
                                     <paper-fab class="section-fab-right" icon="icons:event"></paper-fab>
