Alterando template provisório.

--- a/app/elements/footer-block/footer-block.html
+++ b/app/elements/footer-block/footer-block.html
@@ -176,7 +176,7 @@
                     <a href="http://lviv.gdg.org.ua" target="_blank">GDG Lviv</a>
                 </span>
                 <div class="self-end">
-                    <img class="gdg-logo" src="../../images/gdg-logo.svg" alt="GDG São Paulo">
+                    <img class="gdg-logo" src="../../images/logo.svg" alt="GDG DevFest Cerrado">
                 </div>
             </div>
         </div>
