--- a/app/elements/hero-block/hero-block.html
+++ b/app/elements/hero-block/hero-block.html
@@ -108,13 +108,13 @@
                     </div>
                     <paper-tabs class="hidden-xs" attr-for-selected="data-route" selected="{{route}}">
                         <paper-tab class="text-u-c">
-                            <a data-route="blog" href="#!/blog" class="nav-link horizontal center-center layout">Novidades</a>
+                           <!-- <a data-route="blog" href="#!/blog" class="nav-link horizontal center-center layout">Novidades</a>-->
                         </paper-tab>
                         <paper-tab class="text-u-c">
-                            <a data-route="schedule" href="#!/schedule" class="nav-link horizontal center-center layout">Programação</a>
+                            <!--<a data-route="schedule" href="#!/schedule" class="nav-link horizontal center-center layout">Programação</a>-->
                         </paper-tab>
                         <paper-tab class="text-u-c">
-                            <a data-route="speakers" href="#!/speakers" class="nav-link horizontal center-center layout">Palestrantes</a>
+                            <!-- <a data-route="speakers" href="#!/speakers" class="nav-link horizontal center-center layout">Palestrantes</a>-->
                         </paper-tab>
                     </paper-tabs>
                 </paper-toolbar>
