--- a/app/elements/statistics-block/statistics-block.html
+++ b/app/elements/statistics-block/statistics-block.html
@@ -44,21 +44,16 @@
         },
         attached: function() {
             this.statistics = [{
-                counter: NaN,
+                counter: '+600',
                 caption: 'Participantes'
               }, {
-                  counter: NaN,
+                  counter: '3',
                   caption: 'Áreas simultâneas'
               }, {
-                counter: NaN,
+                counter: '+15',
                 caption: 'Palestras'
-              }, {
-                counter: NaN,
-                caption: 'Lightning Talks'
-              }, {
-                counter: NaN,
-                caption: 'Experimentos interativos'
-            }];
+              }
+            ];
         }
     });
 </script>
