--- a/app/elements/latest-news/latest-news.html
+++ b/app/elements/latest-news/latest-news.html
@@ -27,13 +27,13 @@
                 <div class="flex-5">
                     <span class="title block">[[news.0.title]]</span>
                     <marked-element markdown="[[news.0.brief]]"></marked-element>
-                    <a data-route$="[[news.0.dataRoute]]" href$="[[news.0.url]]" dynamic-link>Continue lendo</a>
+                    <a data-route$="[[news.0.dataRoute]]" href$="[[news.0.url]]" dynamic-link><!--Continue lendo --></a>
                 </div>
                 <span class="flex"></span>
                 <div class="flex-5 second-block">
                     <span class="title block">[[news.1.title]]</span>
                     <marked-element markdown="[[news.1.brief]]"></marked-element>
-                    <a data-route$="[[news.1.dataRoute]]" href="[[news.1.url]]" dynamic-link>Continue lendo</a>
+                    <a data-route$="[[news.1.dataRoute]]" href="[[news.1.url]]" dynamic-link><!--Continue lendo--></a>
                 </div>
             </div>
         </div>
