--- a/app/index.html
+++ b/app/index.html
@@ -139,6 +139,8 @@
                             <featured-people source="../../data/featured-speakers.json">
                                 <h4 class="heading">Palestrantes em Breve, Aguarde...</h4>
                             </featured-people>
+
+                            <tickets-block></tickets-block>
                             <map-block></map-block>
 <!--
                             <tickets-block></tickets-block>
