--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -68,6 +68,6 @@
 <link rel="import" href="cod-block/cod-block.html">
 <link rel="import" href="schedule-block/schedule-block.html">
 <link rel="import" href="session-dialog/session-dialog.html">
-
+<link rel="import" href="lote-preco/lote-preco.html">
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
