Aplicando thema dark importando imagens

--- a/app/elements/footer-block/footer-block.html
+++ b/app/elements/footer-block/footer-block.html
@@ -151,22 +151,18 @@
                     <div class="flex link-block-wrapper">
                         <span class="link-block-title block">Entre em contato</span>
                         <ul class="link-block">
-                            <li><a href="mailto:sp@devfest.com.br">devfestcerrado@gmail.com</a></li>
+                            <li><a href="mailto:devfestcerrado@gmail.com">devfestcerrado@gmail.com</a></li>
                         </ul>
                         <div class="icons-wrapper align-pb-block">
-                            <a href="https://plus.google.com/+gdgSPorg" target="_blank">
+                            <a href="https://plus.google.com/112546496272627831608" target="_blank">
                                 <paper-icon-button icon="app-icons:glus"></paper-icon-button>
                             </a>
-                            <a href="https://twitter.com/gdgsaopaulo" target="_blank">
+                            <a href="https://twitter.com/devfestcerrado" target="_blank">
                                 <paper-icon-button icon="app-icons:twitter"></paper-icon-button>
                             </a>
                         </div>
                     </div>
-                    <div class="flex">
-                        <span class="link-block-title block">Receba novidades</span>
-                        <span>Apenas notícias e informações sobre o evento!</span>
-                        <mailchimp-subscribe url="{{url}}" name="{{name}}"></mailchimp-subscribe>
-                    </div>
+
                 </nav>
             </div>
             <!-- <div class="line full-width"></div> -->
