--- a/app/elements/hero-block/hero-block.html
+++ b/app/elements/hero-block/hero-block.html
@@ -53,6 +53,7 @@
                 text-transform: uppercase;
                 letter-spacing: .09em;
                 line-height: 1;
+                color: #F5A623;
             }
 
             ::content .description {
