--- a/app/elements/latest-news/latest-news.html
+++ b/app/elements/latest-news/latest-news.html
@@ -22,7 +22,7 @@
             }
         </style>
         <div class="container relative">
-            <h4 class="heading text-center">Novidades</h4>
+            <h4 class="heading text-center">Novidades em Breve ...</h4>
             <div class="layout vertical-horizontal">
                 <div class="flex-5">
                     <span class="title block">[[news.0.title]]</span>
