--- a/app/elements/logos-block/logos-block.html
+++ b/app/elements/logos-block/logos-block.html
@@ -3,7 +3,8 @@
         <style>
             :host {
                 display: block;
-                background: #ffffff;
+                background: #A4A4A4;
+                color: #FFFFFF;
             }
 
             :host > .logos-block-wrapper {
@@ -53,8 +54,10 @@
                     </div>
                 </div>
             </template>
-            <a href="https://drive.google.com/open?id=0B20I--Ffg6D4VU9USlpWa3A0cHc" class="block-link" target="_blank" onclick="ga('send', 'become-a-partner', 'button', 'click');">
-                <paper-button class="colorful" raised>Seja um parceiro</paper-button>
+            <a href="https://docs.google.com/presentation/d/1AvaR6gWeFPVNGEcYgWmo6Ze-YClB78ZLQPeM_aFkuEc/edit#slide=id.g1268b1cb41_0_15" class="block-link" target="_blank" onclick="ga('send', 'become-a-partner', 'button', 'click');">
+                <paper-button class="colorful" style="background: #FF5722" raised>
+                    Seja um Parceiro
+                </paper-button>
             </a>
         </div>
     </template>
