--- a/app/elements/map-block/map-block.html
+++ b/app/elements/map-block/map-block.html
@@ -15,6 +15,7 @@
 
             .location-card {
                 min-width: 400px;
+                color: #fff3e0;
             }
 
             .bottom-link {
@@ -49,7 +50,7 @@
                     </div>
                     <div class="card-actions">
                         <a class="bottom-link" href="https://goo.gl/maps/km6TtC5r9yA2" target="_blank">
-                            <paper-button on-tap="readMore">Navegar Google Maps</paper-button>
+                            <paper-button on-tap="readMore">VER NO MAPA</paper-button>
                         </a>
                     </div>
                 </div>
