--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -1,13 +1,13 @@
 <link rel="import" href="tags-color.html">
 <style is="custom-style" include="tags-color">
     :root {
-        --dark-primary-color: #D93602;
+        --dark-primary-color: #4A4A4A;
         --default-primary-color: #FF5722;
         --light-primary-color: #FF774C;
         --text-primary-color: #FFFFFF;
         --accent-color: #FFB46B;
         --primary-background-color: #FF774C;
-        --primary-text-color: #212121;
+        --primary-text-color: #FFFFFF;
         --secondary-text-color: #727272;
         --disabled-text-color: #BDBDBD;
         --divider-color: #B6B6B6;
@@ -35,7 +35,7 @@
 
     body,
     html {
-        background: #fafafa;
+        background: #4A4A4A;
         font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
         color: var(--primary-text-color);
         font-size: 16px;
